data/raw_logs/lexical/lex_30.c.log
/Users/krishtayade/CD_Lab_Project/data/code_snippets/lexical/lex_30.c: In function 'main':
/Users/krishtayade/CD_Lab_Project/data/code_snippets/lexical/lex_30.c:1:22: error: exponent has no digits
    1 | int main() { int x = 0x1p+g; }
      |                      ^~~~~~
